--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run dev",
     "build": "tsc",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./index.ts",
+    "lint": "npx eslint src/**/*.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -24,7 +25,11 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "body-parser": "^1.20.0",
+    "eslint": "^8.13.0",
+    "eslint-config-google": "^0.14.0",
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
